add modal window with full message text (stats), fix bug

--- a/frontend/src/components/Stats/MessagesList.css
+++ b/frontend/src/components/Stats/MessagesList.css
@@ -1,6 +1,7 @@
 #scrolling{
-	width: 303px;
-	float:left;
-	height:400px;
-	overflow:auto; overflow-x:hidden;
+	width: 100%;
+	float: left;
+	height: 400px;
+	overflow: auto; 
+	overflow-x: hidden;
 }
