fix stats style, fix bug with checkbox, add updatind searchAIS on Stats index

--- a/frontend/src/components/Graph/MenuLeft.css
+++ b/frontend/src/components/Graph/MenuLeft.css
@@ -4,9 +4,10 @@
 #scrollbox{
 	width: 100%;
 	margin-top: 10px;
-	float:left;
-	height:250px;
-	overflow:auto; overflow-x:hidden;
+	float: left;
+	height: 250px;
+	overflow:auto; 
+	overflow-x:hidden;
 }
 label > input {display: none;}
 label:hover {cursor: pointer; text-decoration: underline;}
